Fixed the March Break formatting bug, names shouldn't be that long, but with this fix, they won't show up in the printed schdule even if they are too long

--- a/public/css/scheduleprint.css
+++ b/public/css/scheduleprint.css
@@ -145,6 +145,7 @@
 		  padding-top:0px;
 		  padding-bottom:0px;
 		  /*color:white;*/
+		  overflow-y: hidden;
 	  }
 
 	  #schedule_view_table div.panel-heading {
